syntax = "proto3";
package main;
option go_package="/";


message Task {
    string id = 1;
    string subject = 2;
    bool done = 3;
}

message TasksRequest {
}

message TasksResponse {
    repeated Task tasks = 1;
}

message CreateTaskRequest {
    Task task = 1;
}

message UpdateTaskRequest {
    Task task = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message SuccessResponse {
    bool success = 1;
}

service TaskService {
    rpc QueryGetTasks(TasksRequest) returns (TasksResponse) {}
    rpc QueryCreateTask(CreateTaskRequest) returns (SuccessResponse) {}
    rpc QueryUpdateTask(UpdateTaskRequest) returns (SuccessResponse) {}
    rpc QueryDeleteTask(DeleteTaskRequest) returns (SuccessResponse) {}
}